<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_screen_background"
    tools:context=".activities.SettingsActivity">

    <TextView
        android:id="@+id/txt_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Settings_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Volume_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintBottom_toTopOf="@id/txt_rate"
        app:layout_constraintEnd_toStartOf="@+id/seek_music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_title" />

    <SeekBar
        android:id="@+id/seek_music"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/seek_rate"
        app:layout_constraintEnd_toStartOf="@+id/txt_sound"
        app:layout_constraintStart_toEndOf="@+id/txt_music"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_title" />

    <TextView
        android:id="@+id/txt_music_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_percent_volume"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/seek_music"
        app:layout_constraintEnd_toEndOf="@+id/seek_music"
        app:layout_constraintStart_toStartOf="@+id/seek_music" />

    <TextView
        android:id="@+id/txt_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/Volume_sound_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintBottom_toTopOf="@id/txt_rate"
        app:layout_constraintEnd_toStartOf="@id/seek_sound"
        app:layout_constraintStart_toEndOf="@+id/seek_music"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_title" />

    <SeekBar
        android:id="@+id/seek_sound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintBottom_toTopOf="@id/seek_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_sound"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_title" />

    <TextView
        android:id="@+id/txt_sound_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_percent_volume"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/seek_sound"
        app:layout_constraintEnd_toEndOf="@+id/seek_sound"
        app:layout_constraintStart_toStartOf="@+id/seek_sound" />

    <CheckBox
        android:id="@+id/ch_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:checked="false"
        android:text="@string/mute_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sound" />

    <TextView
        android:id="@+id/txt_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/text_rate"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintBottom_toTopOf="@id/sw_auto_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_music" />

    <SeekBar
        android:id="@+id/seek_rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="20"
        app:layout_constraintBottom_toTopOf="@id/sw_auto_save"
        app:layout_constraintEnd_toEndOf="@+id/seek_music"
        app:layout_constraintStart_toEndOf="@+id/txt_rate"
        app:layout_constraintTop_toBottomOf="@+id/txt_music" />

    <TextView
        android:id="@+id/txt_rate_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_text_rate"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintBottom_toTopOf="@id/sw_auto_save"
        app:layout_constraintStart_toEndOf="@id/seek_rate"
        app:layout_constraintTop_toBottomOf="@+id/txt_sound" />

    <!--<TextView
        android:id="@+id/txt_ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Рекламные ролики"/>-->

    <Switch
        android:id="@+id/sw_auto_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:text="@string/auto_save_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/middle_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rate" />

    <!--<CheckBox
        android:id="@+id/ch_sv_every"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:text="Сохранять каждые"
        app:layout_constraintBottom_toTopOf="@+id/ch_sv_choices"
        app:layout_constraintStart_toEndOf="@+id/sw_ads"
        app:layout_constraintTop_toBottomOf="@+id/txt_rate" />

    <CheckBox
        android:id="@+id/ch_sv_choices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:text="Сохранять после выборов"
        app:layout_constraintBottom_toTopOf="ch_sv_notification"
        app:layout_constraintStart_toEndOf="@+id/sw_ads"
        app:layout_constraintTop_toBottomOf="@+id/ch_sv_every" />

    <CheckBox
        android:id="@+id/ch_sv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:text="Уведомление о сохранении"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sw_ads"
        app:layout_constraintTop_toBottomOf="@+id/ch_sv_choices" />-->

    <Button
        android:id="@+id/btn_interface_custom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Настроить\nинтерфейс"
        app:layout_constraintBottom_toBottomOf="@+id/sw_auto_save"
        app:layout_constraintEnd_toEndOf="@+id/ch_mute" />

</androidx.constraintlayout.widget.ConstraintLayout>